--- a/equities/alpaca/alpaca-spot-loader/Dockerfile
+++ b/equities/alpaca/alpaca-spot-loader/Dockerfile
@@ -8,13 +8,18 @@ WORKDIR /project
 COPY requirements.txt .
 
 # install dependencies
-RUN apk update
-RUN python -m pip install --no-cache-dir --upgrade pip \
+RUN apk update \
+    && python -m pip install --no-cache-dir --upgrade pip \
+    && apk add --no-cache \
+        postgresql-dev \
+        gcc \
+        libc-dev \
+        make \
+        dumb-init \
     && pip3 install --no-cache-dir -r requirements.txt \
     && rm -rf /root/./.cache \
     && find . -type d -name __pycache__ -exec rm -r {} \+ \
-    && find . -type d -name .pyc -exec rm -r {} \+ \
-    && apk add --no-cache dumb-init
+    && find . -type d -name .pyc -exec rm -r {} \+
 
 COPY src/ .
 COPY pyproject.toml .
