(fix) removed --as_service flag from docker file CMD in binance module

--- a/crypto/binance/binance-spot-loader/Dockerfile
+++ b/crypto/binance/binance-spot-loader/Dockerfile
@@ -28,4 +28,4 @@ RUN pip3 install .
 EXPOSE 9000
 
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-CMD ["python", "-m", "binance_spot_loader", "--as_service"]
+CMD ["python", "-m", "binance_spot_loader"]
